club: read URL endings which point to bot access searching for security holes from settings.cfg, add further endings

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -20,3 +20,20 @@
 [clubs_stats_min_members]
 description = "Minimum number of members to show statistics in club data"
 type = int
+
+[clubs_unwanted_file_endings]
+description = "list of URL endings that point to files, nothing someone would ever really search for, so return with 404 immediately"
+type = list
+default[] = asp
+default[] = bak
+default[] = bz2
+default[] = cgi
+default[] = gz
+default[] = html
+default[] = json
+default[] = old
+default[] = php
+default[] = rar
+default[] = sql
+default[] = swp
+default[] = zip
